force-app/main/default/objects/Property__c/fields/Flood_Coverage_Needed__c.field-meta.xml
<CustomField>
    <fullName>Flood_Coverage_Needed__c</fullName>
    <description>Bridge Use</description>
    <label>Flood Coverage Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>