force-app/main/default/objects/Property__c/fields/Foreclosure__c.field-meta.xml
<CustomField>
    <fullName>Foreclosure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Foreclosure</label>
    <referenceTo>Foreclosure__c</referenceTo>
    <relationshipLabel>Properties</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <type>Lookup</type>
</CustomField>