force-app/main/default/objects/Property__c/fields/Full_Address__c.field-meta.xml
<CustomField>
    <fullName>Full_Address__c</fullName>
    <description>Full Address of this Property</description>
    <formula>Name + &quot;, &quot; + City__c + &quot;, &quot; + TEXT(State__c) + &quot; &quot; + ZipCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Full Address of this Property</inlineHelpText>
    <label>Full Address</label>
    <type>Text</type>
</CustomField>