force-app/main/default/objects/Property__c/fields/Funding_Date__c.field-meta.xml
<CustomField>
    <fullName>Funding_Date__c</fullName>
    <label>Last Funding Date</label>
    <type>Date</type>
</CustomField>