force-app/main/default/objects/Property__c/fields/Funding_Probability__c.field-meta.xml
<CustomField>
    <fullName>Funding_Probability__c</fullName>
    <description>Property funding probability.</description>
    <formula>CASE(Status__c, 
 &quot;Due Diligence&quot;, &quot;Possible&quot;,
 &quot;Pending&quot;, &quot;Probable&quot;,
 &quot;Closing&quot;, &quot;High Certainty&quot;,
 &quot;On Hold&quot;, &quot;Outlook Uncertain&quot;,
 &quot;Cancelled&quot;, &quot;Won&apos;t Fund&quot;,
 &quot;Inactive&quot;, &quot;Won&apos;t Fund&quot;,
 &quot;Rescinded&quot;, &quot;Won&apos;t Fund&quot;,
 &quot;Funded&quot;
)</formula>
    <inlineHelpText>How likely a property is to fund.</inlineHelpText>
    <label>Funding Probability</label>
    <type>Text</type>
</CustomField>