force-app/main/default/objects/Property__c/fields/Funding_Status__c.field-meta.xml
<CustomField>
    <fullName>Funding_Status__c</fullName>
    <description>Bridge Use</description>
    <label>Funding Status</label>
    <type>TextArea</type>
</CustomField>