force-app/main/default/objects/Property__c/fields/Garage_num_of_Cars__c.field-meta.xml
<CustomField>
    <fullName>Garage_num_of_Cars__c</fullName>
    <description>Size of the Garage - comes from the Appraisal</description>
    <label>Garage # of Cars</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>