force-app/main/default/objects/Property__c/fields/Google_Map_URL__c.field-meta.xml
<CustomField>
    <fullName>Google_Map_URL__c</fullName>
    <description>URL to Property Address</description>
    <formula>IF( RecordType.Name = &quot;Term Loan&quot;, &quot;http://maps.google.com/maps?q=&quot;&amp; Property_Name__c &amp; &quot;+&quot; &amp; City__c &amp; &quot;+&quot; &amp; TEXT(State__c),
&quot;http://maps.google.com/maps?q=&quot;&amp; Clean_Name__c &amp; &quot;+&quot; &amp; City__c &amp; &quot;+&quot; &amp; TEXT(State__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Google Map URL</label>
    <type>Text</type>
</CustomField>