force-app/main/default/objects/Property__c/fields/Google_Street_View__c.field-meta.xml
<CustomField>
    <fullName>Google_Street_View__c</fullName>
    <description>Google Street View Image, link to Google Map for extended research.

Was:
IF(ISBLANK(Google_Street_View_URL__c), &apos;&apos;, HYPERLINK(Google_Map_URL__c, (IMAGE(Google_Street_View_URL__c, &quot;Picture&quot;, 300, 600))))</description>
    <formula>HYPERLINK(Google_Map_URL__c, (IMAGE(Google_Street_View_URL__c, &quot;Picture&quot;, 300, 600)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Click on image to go to Google Map and Street View</inlineHelpText>
    <label>Google Street View</label>
    <type>Text</type>
</CustomField>