force-app/main/default/objects/Property__c/fields/Google_Street_View_URL__c.field-meta.xml
<CustomField>
    <fullName>Google_Street_View_URL__c</fullName>
    <formula>(&quot;https://maps.googleapis.com/maps/api/streetview?size=600x300&amp;location=&quot;&amp; Property_Name__c &amp; &quot;+&quot; &amp; City__c &amp; &quot;+&quot; &amp; TEXT(State__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Google Street View URL</label>
    <type>Text</type>
</CustomField>