force-app/main/default/objects/Property__c/fields/Gross_Yield__c.field-meta.xml
<CustomField>
    <fullName>Gross_Yield__c</fullName>
    <description>Term</description>
    <formula>Annual_Rent__c /  Appraised_Value_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>= Annual Rent / Current Appraised As Is Value.  If this field is blank, make sure Annual Total Expenses is NOT blank.</inlineHelpText>
    <label>Gross Yield</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>