force-app/main/default/objects/Property__c/fields/Gross_Yield_per_Property__c.field-meta.xml
<CustomField>
    <fullName>Gross_Yield_per_Property__c</fullName>
    <description>This a reporting field not on any page layouts</description>
    <label>Gross Yield per Property</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>