force-app/main/default/objects/Property__c/fields/HOA_Frequency__c.field-meta.xml
<CustomField>
    <fullName>HOA_Frequency__c</fullName>
    <label>HOA Frequency</label>
    <length>30</length>
    <type>Text</type>
</CustomField>