force-app/main/default/objects/Property__c/fields/Hold_Time__c.field-meta.xml
<CustomField>
    <fullName>Hold_Time__c</fullName>
    <description>Bridge Use</description>
    <formula>IF(TEXT(Status__c) = &quot;Active&quot;, TODAY() - Funding_Date__c, Payoff_Received_Date__c - Funding_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hold Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>