force-app/main/default/objects/Property__c/fields/Inactive_Date__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Date__c</fullName>
    <description>Term Use
Date the Property is set to Inactive</description>
    <label>Inactive Date</label>
    <type>Date</type>
</CustomField>