force-app/main/default/objects/Property__c/fields/Include_Listing__c.field-meta.xml
<CustomField>
    <fullName>Include_Listing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Include Zillow listing Link for Term Sheet Processing</description>
    <inlineHelpText>Click to include listing link in Term Sheet processing</inlineHelpText>
    <label>Include Listing</label>
    <type>Checkbox</type>
</CustomField>