force-app/main/default/objects/Property__c/fields/Include_Picture__c.field-meta.xml
<CustomField>
    <fullName>Include_Picture__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Include main picture image for Term Sheet processing</description>
    <inlineHelpText>Click to include property main for Term Sheet processing</inlineHelpText>
    <label>Include Picture</label>
    <type>Checkbox</type>
</CustomField>