force-app/main/default/objects/Property__c/fields/Include_Rehab__c.field-meta.xml
<CustomField>
    <fullName>Include_Rehab__c</fullName>
    <inlineHelpText>If &quot;Yes&quot; then the &quot;Approved Completed Rehab Costs&quot; is included in the &quot;Total Projected Cost Basis&quot;</inlineHelpText>
    <label>Include Completed Rehab</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>