force-app/main/default/objects/Property__c/fields/Include_Street_View__c.field-meta.xml
<CustomField>
    <fullName>Include_Street_View__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Include Street View Image for Term Sheet processing</description>
    <inlineHelpText>Click to include Street View Image for Term Sheet processing</inlineHelpText>
    <label>Include Street View</label>
    <type>Checkbox</type>
</CustomField>