force-app/main/default/objects/Property__c/fields/Initial_Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Initial_Disbursement__c</fullName>
    <description>The amount that will be funded on the first funding Advance on this Property</description>
    <formula>IF(
 ISBLANK(Post_Close_Appraisal_Reduction__c),
Max_Initial_Loan_Amount_Input__c,
Max_Initial_Loan_Amount_Input__c - ( Max_Total_Loan_Amount_Input__c * Post_Close_Appraisal_Reduction__c )
)</formula>
    <inlineHelpText>The amount that will be funded on the first funding Advance on this Property</inlineHelpText>
    <label>Initial Disbursement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>