force-app/main/default/objects/Property__c/fields/Initial_Disbursement_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Initial_Disbursement_Remaining__c</fullName>
    <formula>Initial_Disbursement__c - Initial_Disbursement_Used__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Disbursement Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>