force-app/main/default/objects/Property__c/fields/Initial_Disbursement_Used__c.field-meta.xml
<CustomField>
    <fullName>Initial_Disbursement_Used__c</fullName>
    <inlineHelpText>The amount of the Initial Disbursement that has been funded</inlineHelpText>
    <label>Initial Disbursement Funded</label>
    <summarizedField>Property_Advance__c.Initial_Disbursement__c</summarizedField>
    <summaryFilterItems>
        <field>Property_Advance__c.Advance_Status_text__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Property_Advance__c.Property__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>