force-app/main/default/objects/Property__c/fields/Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Properties (Insurance Company)</relationshipLabel>
    <relationshipName>Properties2</relationshipName>
    <type>Lookup</type>
</CustomField>