force-app/main/default/objects/Property__c/fields/Insurance_Company_text__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company_text__c</fullName>
    <label>Insurance Company text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>