force-app/main/default/objects/Property__c/fields/Insurance_Contact__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Properties (Insurance Contact)</relationshipLabel>
    <relationshipName>Properties2</relationshipName>
    <type>Lookup</type>
</CustomField>