force-app/main/default/objects/Property__c/fields/Insurance_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Contact_Number__c</fullName>
    <label>Insurance Contact Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>