force-app/main/default/objects/Property__c/fields/Insurance_Coverage_Amount__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Coverage_Amount__c</fullName>
    <inlineHelpText>Include the amount of any extended coverage, if disclosed</inlineHelpText>
    <label>Insurance Coverage Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>