force-app/main/default/objects/Property__c/fields/Insurance_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Effective_Date__c</fullName>
    <description>Bridge Use</description>
    <label>Insurance Effective Date</label>
    <type>Date</type>
</CustomField>