force-app/main/default/objects/Property__c/fields/Insurance_Escrow__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Escrow__c</fullName>
    <label>Insurance Escrow</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>