force-app/main/default/objects/Property__c/fields/Insurance_Status__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Status__c</fullName>
    <label>Insurance Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Revisions</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>