force-app/main/default/objects/Property__c/fields/Interest_Accrual_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Interest_Accrual_Calculation__c</fullName>
    <label>Interest Accrual Calculation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>