force-app/main/default/objects/Property__c/fields/Interest_Holdback_Amount__c.field-meta.xml
<CustomField>
    <fullName>Interest_Holdback_Amount__c</fullName>
    <label>Interest Holdback Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>