force-app/main/default/objects/Property__c/fields/Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate__c</fullName>
    <description>From Servicer</description>
    <inlineHelpText>Updated by Statebridge Servicer Integration.</inlineHelpText>
    <label>Servicer Interest Rate</label>
    <precision>12</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>