force-app/main/default/objects/Property__c/fields/Interest_Reserves__c.field-meta.xml
<CustomField>
    <fullName>Interest_Reserves__c</fullName>
    <label>Current Interest Reserves Paid</label>
    <summarizedField>Interest_Reserves__c.Interest_Reserves_Payment__c</summarizedField>
    <summaryForeignKey>Interest_Reserves__c.Property__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>