force-app/main/default/objects/Property__c/fields/Interior_Access_POC__c.field-meta.xml
<CustomField>
    <fullName>Interior_Access_POC__c</fullName>
    <description>Interior Access Point of Contact</description>
    <inlineHelpText>Name of person/company to contact for internal access to this Property</inlineHelpText>
    <label>Interior Access POC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>