force-app/main/default/objects/Property__c/fields/Interior_Access_POC_Email__c.field-meta.xml
<CustomField>
    <fullName>Interior_Access_POC_Email__c</fullName>
    <description>Email to contact the person/company regarding internal access to this Property</description>
    <inlineHelpText>Email to contact the person/company regarding internal access to this Property</inlineHelpText>
    <label>Interior Access POC Email</label>
    <type>Email</type>
</CustomField>