force-app/main/default/objects/Property__c/fields/Interior_Access_POC_Phone__c.field-meta.xml
<CustomField>
    <fullName>Interior_Access_POC_Phone__c</fullName>
    <description>Phone Number to contact the person/company regarding internal access to this Property</description>
    <inlineHelpText>Phone Number to contact the person/company regarding internal access to this Property</inlineHelpText>
    <label>Interior Access POC Phone</label>
    <type>Phone</type>
</CustomField>