force-app/main/default/objects/Property__c/fields/Internal_As_Is_ILTV__c.field-meta.xml
<CustomField>
    <fullName>Internal_As_Is_ILTV__c</fullName>
    <formula>Initial_Disbursement__c / Internal_As_Is_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal As-Is ILTV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>