force-app/main/default/objects/Property__c/fields/Internal_As_Rehab_LTV__c.field-meta.xml
<CustomField>
    <fullName>Internal_As_Rehab_LTV__c</fullName>
    <formula>Approved_Advance_Amount_Max__c / Internal_As_Rehab_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal As Rehab LTV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>