force-app/main/default/objects/Property__c/fields/Internal_As_Rehab_Value__c.field-meta.xml
<CustomField>
    <fullName>Internal_As_Rehab_Value__c</fullName>
    <label>Internal As Rehab Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>