force-app/main/default/objects/Property__c/fields/Invalid_Address__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invalid Address</label>
    <type>Checkbox</type>
</CustomField>