force-app/main/default/objects/Property__c/fields/Is_Assigned_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Assigned_User__c</fullName>
    <description>This will be TRUE if the User viewing this Record is the Underwriter or Closer</description>
    <formula>OR(
 $User.Id = Closer__c,
 $User.Id = Underwriter__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This will be checked if the User viewing this Record is the Underwriter or Closer</inlineHelpText>
    <label>Is Assigned User</label>
    <type>Checkbox</type>
</CustomField>