force-app/main/default/objects/Property__c/fields/Is_HOA__c.field-meta.xml
<CustomField>
    <fullName>Is_HOA__c</fullName>
    <label>Is HOA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>