force-app/main/default/objects/Property__c/fields/Is_Orphan__c.field-meta.xml
<CustomField>
    <fullName>Is_Orphan__c</fullName>
    <formula>AND(Clean_Name__c != Clean_Property_Name__c, ISBLANK(Parent_Property__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Orphan</label>
    <type>Checkbox</type>
</CustomField>