force-app/main/default/objects/Property__c/fields/Is_Parent__c.field-meta.xml
<CustomField>
    <fullName>Is_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this property is a parent in a multi unit property</description>
    <label>Is Parent</label>
    <type>Checkbox</type>
</CustomField>