force-app/main/default/objects/Property__c/fields/Is_Special_Asset__c.field-meta.xml
<CustomField>
    <fullName>Is_Special_Asset__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this Property is a Special Asset</description>
    <inlineHelpText>Indicates if this Property is a Special Asset</inlineHelpText>
    <label>Is Special Asset</label>
    <type>Checkbox</type>
</CustomField>