force-app/main/default/objects/Property__c/fields/Is_Sub_Unit__c.field-meta.xml
<CustomField>
    <fullName>Is_Sub_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Property is a sub unit within a multi unit property</description>
    <label>Is Sub Unit</label>
    <type>Checkbox</type>
</CustomField>