force-app/main/default/objects/Property__c/fields/Late_Charge__c.field-meta.xml
<CustomField>
    <fullName>Late_Charge__c</fullName>
    <label>Late Charge (%)</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>