force-app/main/default/objects/Property__c/fields/Lease_Ready__c.field-meta.xml
<CustomField>
    <fullName>Lease_Ready__c</fullName>
    <description>Provided by the Borrower.  Indicates if the Property is ready to be leased</description>
    <inlineHelpText>Indicates if the Property is ready to be leased</inlineHelpText>
    <label>Lease Ready</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>