force-app/main/default/objects/Property__c/fields/Lease_Term_formula__c.field-meta.xml
<CustomField>
    <fullName>Lease_Term_formula__c</fullName>
    <description>Term Use</description>
    <formula>IF(OR(
 ISPICKVAL( Property_Type__c , &quot;SFR&quot;),
 ISPICKVAL( Property_Type__c , &quot;Townhome&quot;)),
36,24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease Term Assumption</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>