force-app/main/default/objects/Property__c/fields/Lease_Up_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Lease_Up_Marketing__c</fullName>
    <label>Lease Up/ Marketing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>