force-app/main/default/objects/Property__c/fields/Legally_Conforming__c.field-meta.xml
<CustomField>
    <fullName>Legally_Conforming__c</fullName>
    <description>Is this property legally conforming? 
Term Use</description>
    <label>Legally Conforming</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>