force-app/main/default/objects/Property__c/fields/Lender_Comments__c.field-meta.xml
<CustomField>
    <fullName>Lender_Comments__c</fullName>
    <label>Lender Comments</label>
    <type>TextArea</type>
</CustomField>