force-app/main/default/objects/Property__c/fields/Lien_Position__c.field-meta.xml
<CustomField>
    <fullName>Lien_Position__c</fullName>
    <description>From Servicer</description>
    <inlineHelpText>Updated by Statebridge Servicer Integration.</inlineHelpText>
    <label>Lien Position</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>