force-app/main/default/objects/Property__c/fields/Line_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Line_Maturity_Date__c</fullName>
    <description>From Servicer</description>
    <inlineHelpText>Updated by Statebridge Servicer Integration.</inlineHelpText>
    <label>Line Maturity Date</label>
    <type>Date</type>
</CustomField>