force-app/main/default/objects/Property__c/fields/Loan_Amount_Per_Square_Foot__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount_Per_Square_Foot__c</fullName>
    <formula>Approved_Advance_Amount_Max__c / VALUE(Square_Feet__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Approved Advance Amount / Square Feet</inlineHelpText>
    <label>Loan Amount Per Square Foot</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>