force-app/main/default/objects/Property__c/fields/Loan_Amount_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount_Per_Unit__c</fullName>
    <formula>Approved_Advance_Amount_Max__c  / Number_of_Units__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Approved Advance Amount / # Of Units</inlineHelpText>
    <label>Loan Amount Per Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>