force-app/main/default/objects/Property__c/fields/Loan_Document_Status__c.field-meta.xml
<CustomField>
    <fullName>Loan_Document_Status__c</fullName>
    <label>Loan Document Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Revisions</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>