force-app/main/default/objects/Property__c/fields/Loan_Status__c.field-meta.xml
<CustomField>
    <fullName>Loan_Status__c</fullName>
    <description>From Servicer</description>
    <inlineHelpText>Updated by Statebridge Servicer Integration.</inlineHelpText>
    <label>Servicer Loan Status</label>
    <length>75</length>
    <type>Text</type>
</CustomField>