force-app/main/default/objects/Property__c/fields/Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Type__c</fullName>
    <description>From Servicer</description>
    <inlineHelpText>Updated by Statebridge Servicer Integration.</inlineHelpText>
    <label>Loan Type</label>
    <length>75</length>
    <type>Text</type>
</CustomField>