force-app/main/default/objects/Property__c/fields/Loss_Mitigation_Associate__c.field-meta.xml
<CustomField>
    <fullName>Loss_Mitigation_Associate__c</fullName>
    <description>Loss Mitigation Associate is a user lookup on Deal object
The Loss Mitigation Associate working with the Borrower</description>
    <formula>Deal__r.Loss_Mitigation_Associate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Loss Mitigation Associate working with the Borrower</inlineHelpText>
    <label>Loss Mitigation Associate</label>
    <type>Text</type>
</CustomField>