force-app/main/default/objects/Property__c/fields/Main_Picture__c.field-meta.xml
<CustomField>
    <fullName>Main_Picture__c</fullName>
    <description>Display image 300hx600w</description>
    <formula>IF(ISBLANK(Picture__c), &apos;&apos;, HYPERLINK(Picture__c, (IMAGE(Picture__c, &quot;Picture&quot;, 300, 400))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Main Picture</label>
    <type>Text</type>
</CustomField>