force-app/main/default/objects/Property__c/fields/Maintenance_Repairs__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Repairs__c</fullName>
    <label>Maintenance/ Repairs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>