force-app/main/default/objects/Property__c/fields/Maintenance_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Turnover__c</fullName>
    <description>Term Use</description>
    <formula>IF( Deal__r.Perc_Section_8__c &lt;= 40, 1.25,
IF( Deal__r.Perc_Section_8__c &gt; 40,
 IF( ISPICKVAL( Section_8__c , &quot;Y&quot;), 1.56,
 1.25),1.25))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maintenance Turnover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>