force-app/main/default/objects/Property__c/fields/Maturity_Default__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Default__c</fullName>
    <description>Not Used Any Longer</description>
    <label>Maturity Default</label>
    <length>255</length>
    <type>Text</type>
</CustomField>