force-app/main/default/objects/Property__c/fields/Maturity_Status__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Status__c</fullName>
    <description>Details related to the Maturity</description>
    <label>Maturity Status</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>