force-app/main/default/objects/Property__c/fields/Max_Advance_Fee__c.field-meta.xml
<CustomField>
    <fullName>Max_Advance_Fee__c</fullName>
    <formula>Deal__r.Max_Advance_Fee_formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Advance Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>