force-app/main/default/objects/Property__c/fields/Max_Based_on_ARV_LTC_Limitors__c.field-meta.xml
<CustomField>
    <fullName>Max_Based_on_ARV_LTC_Limitors__c</fullName>
    <description>Max Available for Rehab based on ARV/LTC Limitors
Bridge Reno Use</description>
    <formula>Max_Total_Loan_Amount__c -  Max_Initial_Loan_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Max Available for Rehab based on ARV/LTC Limitors</inlineHelpText>
    <label>Max Based on ARV/LTC Limitors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>